<resources>

    <!-- Register -->

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="register">REGISTER</string>

    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="addbook_sale">Add Book For Sale</string>
    <string name="addbook_request">Request a Book</string>

    <string name="app_name">Book Market</string>
    <string name="app_name_2">Book \nMarket</string>

    <string name="edit_book_info">Edit Book Info</string>
    <string name="my_books">My Books</string>
    <string name="newest_books">Newest Books</string>
    <string name="book_list">Book List</string>

    <!-- _____ "My Profile" - ViewProfileActivity   ______________________________ -->
    <string name="_my_messages">My Messages</string>
    <string name="my_reviews">My Reviews</string>

    <string name="mp_name">Name: </string>
    <string name="mp_about">Few words about me: </string>
    <string name="mp_email">Email: </string>
    <string name="mp_phone_number">Phone number: </string>
    <string name="mp_username">Username: </string>
    <string name="mp_password">Password \t (Only enter if you want to change password): </string>
    <string name="mp_re_password">Re-type password: </string>

    <string name="mp_my_books">My Books</string>
    <string name="mp_my_user_profile">User Profile</string>
    <string name="mp_info">A couple of word about me</string>
    <string name="mp_my_profile">My Profile</string>
    <string name="mp_button_text">Update My Info</string>
    <string name="mp_button_menu">Back To Menu</string>
    <string name="mp_button_profile">Back To My Profile</string>
    <string name="mr_received_reviews">Received Reviews</string>
    <string name="mr_written_reviews">Written Reviews</string>
    <string name="my_received_reviews">\n My\n Received\n Reviews</string>

    <!-- _____ Menu - MenuActivity   ___________________________________________  -->
    <string name="menu_card_1">All Books</string>
    <string name="menu_card_2">Newest Books</string>
    <string name="menu_card_3">Sell a Book</string>
    <string name="menu_card_4">Request \na Book</string>
    <string name="menu_card_5">My Profile</string>
    <string name="menu_card_6">* ??? *</string>
    <string name="menu_card_7">About \nDevelopers</string>
    <string name="menu_card_8">Logout</string>


    <string-array name="subject_array">
        <item>Industrial and Mechanical Engineering</item>
        <item>Electrical Computer Engineering</item>
        <item>Business Administration</item>
        <item>Civil Engineering</item>
        <item>Computational Engineering</item>
        <item>Computer Science</item>
        <item>Chemistry</item>
        <item>Dentistry</item>
        <item>Education</item>
        <item>Economics</item>
        <item>English</item>
        <item>French</item>
        <item>Geography</item>
        <item>Geology</item>
        <item>German</item>
        <item>Health Science</item>
        <item>Law</item>
        <item>Medical Science</item>
        <item>Nursing</item>
        <item>Physics</item>
        <item>Psychology</item>
        <item>Software Engineering</item>
        <item>Spanish</item>
    </string-array>
    <string name="title_activity_user_info">UserInfoActivity</string>
</resources>
