<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <ScrollView style="@style/parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:text="    Register            "
                    style="@style/viewParent.headerTextother"
                    android:layout_gravity="bottom"/>

                <ImageView
                    android:paddingTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fill_forms"
                    android:adjustViewBounds="true" />



            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:paddingTop="170dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/shape"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    android:fitsSystemWindows="true">

                    <TextView
                        style="@style/headerTextPrimary"
                        android:layout_marginTop="@dimen/loginViewsMargin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:hint="@string/name"
                        android:inputType="textPersonName"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phone number: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:hint="@string/phone"
                        android:inputType="phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Username: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:hint="@string/username"
                        android:inputType="textPersonName" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Password: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Confirm Password: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtReTypepassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />


                    <Button
                        android:id="@+id/submit"
                        style="@style/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="Register" />

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>