<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddBookForSaleActivity">

    <ScrollView style="@style/parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/app_name"
                    android:textSize="24sp"/>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:paddingTop="170dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/shape"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    android:fitsSystemWindows="true">

                    <TextView
                        style="@style/headerTextPrimary"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/addbook_sale"
                        android:textSize="34sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Title: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Author: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edition: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtEdition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Condition: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtCondition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Subject: "
                        android:textColor="@color/primaryTextColor" />

                    <Spinner
                        android:id="@+id/edtSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:outlineAmbientShadowColor="@color/primaryTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Price: "
                        android:textColor="@color/primaryTextColor" />

                    <EditText
                        android:id="@+id/edtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:textColor="@color/primaryTextColor" />

                    <Button
                        android:id="@+id/btnUploadImage"
                        style="@style/loginButton"
                        android:layout_width="250dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:text="Upload Image"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/uploadImage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        app:srcCompat="@drawable/book" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        style="@style/loginButton"
                        android:text="Submit"
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/backToMenu"
                        style="@style/loginButton"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="120dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/mp_button_menu"
                        android:textColor="@color/colorMoreBlack"
                        android:textSize="22sp" />

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>